--- a/Cyclone_OSG.qsf
+++ b/Cyclone_OSG.qsf
@@ -97,4 +97,5 @@ set_global_assignment -name FLOW_ENABLE_RTL_VIEWER ON
 set_global_assignment -name SMART_RECOMPILE ON
 set_global_assignment -name ALLOW_REGISTER_RETIMING OFF
 set_location_assignment PIN_39 -to ex_1
+set_location_assignment PIN_38 -to ellight
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
